# tsv-converter

./: .eslintrc.cjs  .gitattributes  .gitignore  .yarnrc.yml  Cargo.toml  README.md  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
assets/fonts/: LICENSE-iosevka.md
crate/: Cargo.toml  tauri.conf.json
crate/icons/: icon.icns
crate/src/: command.rs  commands.rs  macos.rs  main.rs
src/: app.css  app.d.ts  app.html  app.rs  controller.rs  font.rs  hooks.ts  interaction.rs  load_vid.rs  main.rs  model.rs  style.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  main.rs  metadata.rs
src/components/: EditForm.svelte  FileInput.svelte  FileMetadata.svelte
src/interaction/: mod.rs
src/lib/: EditForm.svelte  FileInput.svelte  FileMetadata.svelte  FileStatTable.svelte  Header.svelte  ffmpeg.ts  fileUtils.ts  util.ts
src/routes/: __error.svelte  __layout.svelte  index.svelte
src/stores/: file.ts  index.ts  options.ts  video.ts
src/style/: color.rs  font.rs  mod.rs
src/view/: edit_file.rs  mod.rs  notification.rs  repo_button.rs  select_file.rs  select_file_button.rs
