[package]
name = "tsv-converter"
version = "0.2.0"
edition = "2021"
description = "TinyCircuits TinyScreen Video (TSV) converter."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/tsv-converter"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["tinycircuits", "tinyscreen"]
publish = false

[features]
default = []

[dependencies]
anyhow = "1.0.53"
ffmpeg-next = "4.4.0"
lazy_static = "1.4.0"
native-dialog = "0.6.3"
thumbnailer = { version = "0.3.0", features = ["ffmpeg-next"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
branch = "master"
features = ["tokio"]

[dependencies.iced_native]
git = "https://github.com/iced-rs/iced"
branch = "master"

# [dependencies.tokio]
# version = "1.17.0"
# default-features = false
# features = ["rt-multi-thread", "parking_lot"]

[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
# strip = "symbols"
