[package]
name = "tsv-converter"
version = "0.1.0"
authors = ["Teddy Byron <ted@tedbyron.com>"]
edition = "2021"
rust-version = "1.62"
description = "TinyCircuits TinyScreen Video (TSV) converter"
readme = "../README.md"
repository = "https://github.com/tedbyron/tsv-converter"
license-file = "../LICENSE"
publish = false

[build-dependencies.tauri-build]
version = "1.0.3"
features = []

[dependencies]
mime_guess = "2.0.4"
notify = { version = "5.0.0-pre.15", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
time = { version = "0.3.11", features = ["serde"] }

[dependencies.tauri]
version = "1.0.3"
features = [
    "dialog-open",
    "dialog-save",
    "global-shortcut-all",
    "protocol-asset",
    "shell-open",
    "shell-sidecar"
]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
# panic = "abort"
strip = true
