[package]
name = "app"
version = "0.1.0"
description = "TinyCircuits TinyScreen Video (TSV) converter."
authors = ["Teddy Byron <ted@tedbyron.com>"]
license-file = "../LICENSE"
repository = "https://github.com/tedbyron/tsv-converter"
default-run = "app"
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.5", features = ["dialog-open", "dialog-save", "protocol-asset", "shell-open", "shell-sidecar"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
